--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,16 @@
               <a class="nav-link" href='{{ url_for("index") }}'> home <span class="sr-only">(current)</span></a>
             </li>
 
+  {% if session['logged_in'] == True %}
+            <li class="nav-item active">
+              <a class="nav-link" href='{{ url_for("logout") }}'> log out <span class="sr-only">(current)</span></a>
+            </li>
+   {% else %}
+             <li class="nav-item active">
+               <a class="nav-link" href='{{ url_for("login") }}'> log in <span class="sr-only">(current)</span></a>
+             </li>
+   {% endif %}
+
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 más
