everything seems to work

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <dt>Password:
     <dd><input type=password name=password>
   </dl>
-  <p><input type=submit value=Login>
+  <div><input class="btn btn-primary" type="submit" value="Login" style="margin-top: 15px; margin-bottom: 15px;"></div>
 
 
 
