--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,7 +19,8 @@
     <dt>Enter Email:
     <dd><input type=text name=email>
   </dl>
-  <p><input type=submit value="Sign up">
+    <div><input class="btn btn-primary" type="submit" value="Sign up" style="margin-top: 15px;"></div>
+
 
 
 
